fix: better contrast on butter panel

--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -82,7 +82,7 @@
 	width: 80px;
 	height: 80px;
 	border-radius: 50%;
-	background-color: #d87093;
+	background-color: #ed73aa;
 	cursor: pointer;
 	display: flex;
 	align-items: center;
